--- a/styles.css
+++ b/styles.css
@@ -6,39 +6,109 @@
 *{
     font-family: 'Press_Start_2P', Arial, sans-serif;;
 }
-header img{
-    height: 50px;
-    width: 50px;
+
+/*Para escritorio*/
+@media screen and (min-width: 769px){
+    body{
+        font-size: 14px;
+        line-height: 1.5;
+    }
+    /*header*/
+    header img{
+        height: 50px;
+        width: 50px;
+    }
+    nav{
+        display: flex;
+        justify-content: flex-end;
+
+    }
+
+    .tema{
+        justify-content: flex-end;
+        width: 20%;
+    }
+    /*main*/
+    main{
+        display: flex;
+        margin: 50px;
+        height: 500px;
+
+    } 
+    main div{
+        width: 90%;
+        display: block;
+    }
+   
+    input, textarea{
+        width: 80%;
+        height: 60%;
+    }
+    .btn{
+        margin-top: 50px;
+        display: flex;
+        justify-items: center;
+    }
+
+    /*footer*/
+    footer{
+        display: flex;
+        justify-content: center;
+    }
 }
-nav{
-    display: flex;
-    justify-content: flex-end;
+/*Para tables*/
+@media screen and (max-width: 768px){
+    body{
+        font-size: 14px;
+        line-height: 1.3;
+    }
+    /*header*/
+    header img{
+        height: 25px;
+        width: 25px;
+    }
+    nav{
+        display: flex;
+        justify-content: flex-end;
+
+    }
+
+    .tema{
+        justify-content: flex-end;
+        width: 20%;
+    }
+    /*main*/
+    main{
+        margin: 50px;
+        display: block;
+        justify-content: space-between;
+
+    }
+    .part{
+        justify-content: space-between;
+        width: 90%;
+        display: block;
+    }
+    input, textarea{
+        width: 100%;
+        height: 100px;
+        margin: 0 auto;
+    }
+    button{
+        width: 100%;
+        height: 50%;
+    }
+    /*footer*/
+    footer{
+        display: flex;
+        justify-content: center;
+    }
+
+}
+/*Para celulares*/
+@media screen and (max-width: 375px){
 
 }
 
-.tema{
-    justify-content: flex-end;
-    width: 20%;
-}
-main{
-    margin: 50px;
-    display: flex;
-    justify-content: space-between;
-
-}
-.part{
-    justify-content: space-between;
-    width: 90%;
-    display: block;
-}
-input, textarea{
-    width: 80%;
-    height: 60%;
-    margin: 0 auto;
-}
-footer{
-    display: flex;
-    justify-content: center;
-}
 
   
