--- a/styles.css
+++ b/styles.css
@@ -59,45 +59,51 @@
 /*Para tables*/
 @media screen and (max-width: 768px){
     body{
-        font-size: 14px;
-        line-height: 1.3;
+        font-size: 10px;
+        line-height: 1.5;
     }
     /*header*/
-    header img{
-        height: 25px;
-        width: 25px;
-    }
     nav{
         display: flex;
         justify-content: flex-end;
 
     }
+    header img{
+        justify-content: flex-start;
+        height: 30px;
+        width: 30px;
+    }
 
     .tema{
+        font-size: 8px;
         justify-content: flex-end;
         width: 20%;
     }
     /*main*/
     main{
-        margin: 50px;
         display: block;
-        justify-content: space-between;
+        justify-content: center;
+        margin: 50px;
+        height: 500px;
 
-    }
-    .part{
-        justify-content: space-between;
+    } 
+    main div{
+        margin-top: 30px;
+        margin-left: 20px;
         width: 90%;
         display: block;
     }
+   
     input, textarea{
-        width: 100%;
-        height: 100px;
-        margin: 0 auto;
+        width: 80%;
+        height: 60%;
     }
-    button{
-        width: 100%;
-        height: 50%;
+    .btn{
+        margin-top: 50px;
+        display: flex;
+        justify-items: center;
     }
+
     /*footer*/
     footer{
         display: flex;
